--- a/Views/Projects/ManageProjectUserAssignments.cshtml
+++ b/Views/Projects/ManageProjectUserAssignments.cshtml
@@ -53,7 +53,7 @@
                                 <button type="submit" value="false" name="addUser" class="form-control btn-danger">Remove from Projects</button>
                             </div>
                             <div class="col">
-                                @Html.ActionLink("Close", "Dashboard", "Home", new { @class = "form-control btn btn-dark" })
+                                @Html.ActionLink("Close", "Dashboard", "Home", null, new { @class = "form-control btn btn-dark" })
                             </div>
                         </div>
                     </div>  <!-- /.card-footer-->
