--- a/Views/Admin/UserProfileIndex.cshtml
+++ b/Views/Admin/UserProfileIndex.cshtml
@@ -18,10 +18,10 @@
                                         
                                     </th>
                                     <th>
-                                        @Html.Display("Name")
+                                        @Html.DisplayNameFor(model => model.FullName)
                                     </th>
                                     <th>
-                                        @Html.Display("Email")
+                                        @Html.DisplayNameFor(model => model.Email)
                                     </th>
                                     
                                     <th>
@@ -39,18 +39,18 @@
                                             <img class="direct-chat-img" src="@item.AvatarUrl" alt="">                                           
                                         </td>
                                         <td>
-                                            @Html.Display(item.FullName)
+                                            @Html.DisplayFor(ModelItem => item.FullName)
                                         </td>
                                         <td>
-                                            @Html.Display(item.Email)
+                                            @Html.DisplayFor(ModelItem => item.Email)
                                         </td>
                                         
                                         <td>
-                                            @Html.Display(item.Role)
+                                            @Html.DisplayFor(ModelItem => item.Role)
                                         </td>                                       
                                         <td>
                                             @*@Html.ActionLink("Edit", "Edit", new { id = item.Id }) |*@
-                                            @Html.ActionLink("Details", "Details", new { id = item.Id }) 
+                                            @Html.ActionLink("User Profile", "UserProfileDetails", "Admin", new { id = item.Id }, null) 
                                            
                                         </td>
                                     </tr>
